--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, World</h1>
+    <h1>Hello, Codeworks</h1>
+    <p>Today I learned how to upload my project to github and publish it.</p>
 </body>
 </html>
